[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/ui.png" type="Texture" id=1]
[ext_resource path="res://ui/TextureRect.gd" type="Script" id=2]
[ext_resource path="res://ui/HoverableButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/GameUI.gd" type="Script" id=4]
[ext_resource path="res://resources/ui/font_default.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/PauseButton.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 31, 11, 11 )

[sub_resource type="StyleBoxTexture" id=4]
texture = SubResource( 3 )
region_rect = Rect2( 0, 0, 11, 11 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 22, 9, 9 )

[sub_resource type="StyleBoxTexture" id=6]
texture = SubResource( 5 )
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 9, 22, 9, 9 )

[sub_resource type="StyleBoxTexture" id=8]
texture = SubResource( 7 )
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 13, 9, 9 )

[sub_resource type="StyleBoxTexture" id=10]
texture = SubResource( 9 )
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="Theme" id=1]
Button/fonts/font = ExtResource( 5 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 10 )
Label/fonts/font = ExtResource( 5 )
MarginContainer/constants/margin_bottom = 5
MarginContainer/constants/margin_left = 5
MarginContainer/constants/margin_right = 5
MarginContainer/constants/margin_top = 5

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 11, 13 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 11, 0, 10, 11 )

[node name="GameUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 4 )

[node name="HBox1" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 331.0
margin_bottom = 27.0
size_flags_vertical = 0
custom_constants/separation = 6

[node name="TimerIcon" type="TextureRect" parent="HBox1"]
margin_right = 18.6154
margin_bottom = 22.0
rect_min_size = Vector2( 18.6154, 0 )
size_flags_vertical = 5
texture = SubResource( 2 )
stretch_mode = 1
script = ExtResource( 2 )

[node name="TimeLbl" type="Label" parent="HBox1"]
margin_left = 24.0
margin_right = 36.0
margin_bottom = 22.0
size_flags_vertical = 5
text = "45"
valign = 1

[node name="PointsLbl" type="Label" parent="HBox1"]
margin_left = 42.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "1000"
align = 2
valign = 1

[node name="PauseBtn" parent="HBox1" instance=ExtResource( 3 )]
margin_left = 304.0
margin_right = 326.0
margin_bottom = 22.0
rect_min_size = Vector2( 22, 0 )
icon = SubResource( 11 )
icon_align = 1
script = ExtResource( 6 )
